Proyecto1OLC2/target/generated-sources/antlr4/com/mycompany/y/YParser.java
// Generated from com/mycompany/y/Y.g4 by ANTLR 4.13.2
package com.mycompany.y;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class YParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, PORCENTAJE=7, ESTRUCTURAS_SECCION=8, 
		ESTRUCTURA=9, ENTERO=10, CADENA=11, FLOTANTE=12, CARACTER=13, FUNCIONES_SECCION=14, 
		DEFINIR=15, RETORNAR=16, SI=17, ENTONCES=18, SINO=19, CONTRARIO=20, ELEGIR=21, 
		CASO=22, ROMPER=23, SIEMPRE=24, PARA=25, CONTINUAR=26, MIENTRAS=27, HACER=28, 
		IMPRIMIR=29, LEER=30, TIPO_RETORNO=31, SUMA=32, RESTA=33, MULTIPLICACION=34, 
		DIVISION=35, IGUALDAD=36, DESIGUALDAD=37, MENOR_QUE=38, MAYOR_QUE=39, 
		MAYOR_IGUAL_QUE=40, MENOR_IGUAL_QUE=41, ASIGNACION=42, AND=43, OR=44, 
		NEGACION=45, SUMA_ABREVIADA=46, RESTA_ABREVIADA=47, ID=48, VALOR_DECIMAL=49, 
		VALOR_ENTERO=50, VALOR_CARACTER=51, VALOR_CADENA=52, COMENTARIO_LINEA=53, 
		COMENTARIO_MULTILINEA=54, TAB=55, SALTO_LINEA=56, ESPACIO=57, INDENT=58, 
		DEDENT=59;
	public static final int
		RULE_programa = 0, RULE_defEstructuras = 1, RULE_estructura = 2, RULE_atributo = 3, 
		RULE_tipoDatoId = 4, RULE_defDatoPrimitivo = 5, RULE_defArreglo = 6, RULE_tipoDato = 7, 
		RULE_objeto = 8, RULE_estructuraAnidada = 9, RULE_defFunciones = 10, RULE_tipoFuncion = 11, 
		RULE_funSinRetorno = 12, RULE_parametro = 13, RULE_instruccion = 14, RULE_declararVariable = 15, 
		RULE_declararDatoPrimitivo = 16, RULE_asignacionDatoPrimitivo = 17, RULE_expresion = 18, 
		RULE_exprLogica = 19, RULE_exprRelacional = 20, RULE_exprAritmetica = 21, 
		RULE_termino = 22, RULE_factor = 23, RULE_valor = 24, RULE_funConRetorno = 25;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "defEstructuras", "estructura", "atributo", "tipoDatoId", 
			"defDatoPrimitivo", "defArreglo", "tipoDato", "objeto", "estructuraAnidada", 
			"defFunciones", "tipoFuncion", "funSinRetorno", "parametro", "instruccion", 
			"declararVariable", "declararDatoPrimitivo", "asignacionDatoPrimitivo", 
			"expresion", "exprLogica", "exprRelacional", "exprAritmetica", "termino", 
			"factor", "valor", "funConRetorno"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "'['", "']'", "'('", "')'", "','", "'%'", "'estructuras'", 
			"'estructura'", "'entero'", "'cadena'", "'flotante'", "'caracter'", "'funciones'", 
			"'definir'", "'retornar'", "'si'", "'entonces'", "'sino'", "'contrario'", 
			"'elegir'", "'caso'", "'romper'", "'siempre'", "'para'", "'continuar'", 
			"'mientras'", "'hacer'", "'imprimir'", "'leer'", "'->'", "'+'", "'-'", 
			"'*'", "'/'", "'=='", "'!='", "'<'", "'>'", "'>='", "'<='", "'='", "'&&'", 
			"'||'", "'!'", "'++'", "'--'", null, null, null, null, null, null, null, 
			"'\\t'", null, "' '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, "PORCENTAJE", "ESTRUCTURAS_SECCION", 
			"ESTRUCTURA", "ENTERO", "CADENA", "FLOTANTE", "CARACTER", "FUNCIONES_SECCION", 
			"DEFINIR", "RETORNAR", "SI", "ENTONCES", "SINO", "CONTRARIO", "ELEGIR", 
			"CASO", "ROMPER", "SIEMPRE", "PARA", "CONTINUAR", "MIENTRAS", "HACER", 
			"IMPRIMIR", "LEER", "TIPO_RETORNO", "SUMA", "RESTA", "MULTIPLICACION", 
			"DIVISION", "IGUALDAD", "DESIGUALDAD", "MENOR_QUE", "MAYOR_QUE", "MAYOR_IGUAL_QUE", 
			"MENOR_IGUAL_QUE", "ASIGNACION", "AND", "OR", "NEGACION", "SUMA_ABREVIADA", 
			"RESTA_ABREVIADA", "ID", "VALOR_DECIMAL", "VALOR_ENTERO", "VALOR_CARACTER", 
			"VALOR_CADENA", "COMENTARIO_LINEA", "COMENTARIO_MULTILINEA", "TAB", "SALTO_LINEA", 
			"ESPACIO", "INDENT", "DEDENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Y.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public YParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public DefFuncionesContext defFunciones() {
			return getRuleContext(DefFuncionesContext.class,0);
		}
		public DefEstructurasContext defEstructuras() {
			return getRuleContext(DefEstructurasContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YVisitor ) return ((YVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(52);
				defEstructuras();
				}
				break;
			}
			setState(55);
			defFunciones();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefEstructurasContext extends ParserRuleContext {
		public TerminalNode PORCENTAJE() { return getToken(YParser.PORCENTAJE, 0); }
		public TerminalNode ESTRUCTURAS_SECCION() { return getToken(YParser.ESTRUCTURAS_SECCION, 0); }
		public TerminalNode SALTO_LINEA() { return getToken(YParser.SALTO_LINEA, 0); }
		public List<EstructuraContext> estructura() {
			return getRuleContexts(EstructuraContext.class);
		}
		public EstructuraContext estructura(int i) {
			return getRuleContext(EstructuraContext.class,i);
		}
		public DefEstructurasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defEstructuras; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).enterDefEstructuras(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).exitDefEstructuras(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YVisitor ) return ((YVisitor<? extends T>)visitor).visitDefEstructuras(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefEstructurasContext defEstructuras() throws RecognitionException {
		DefEstructurasContext _localctx = new DefEstructurasContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_defEstructuras);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(PORCENTAJE);
			setState(58);
			match(ESTRUCTURAS_SECCION);
			setState(59);
			match(SALTO_LINEA);
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ESTRUCTURA) {
				{
				{
				setState(60);
				estructura();
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EstructuraContext extends ParserRuleContext {
		public TerminalNode ESTRUCTURA() { return getToken(YParser.ESTRUCTURA, 0); }
		public TerminalNode ID() { return getToken(YParser.ID, 0); }
		public TerminalNode SALTO_LINEA() { return getToken(YParser.SALTO_LINEA, 0); }
		public TerminalNode INDENT() { return getToken(YParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(YParser.DEDENT, 0); }
		public List<AtributoContext> atributo() {
			return getRuleContexts(AtributoContext.class);
		}
		public AtributoContext atributo(int i) {
			return getRuleContext(AtributoContext.class,i);
		}
		public EstructuraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estructura; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).enterEstructura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).exitEstructura(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YVisitor ) return ((YVisitor<? extends T>)visitor).visitEstructura(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EstructuraContext estructura() throws RecognitionException {
		EstructuraContext _localctx = new EstructuraContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_estructura);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(ESTRUCTURA);
			setState(67);
			match(ID);
			setState(68);
			match(T__0);
			setState(69);
			match(SALTO_LINEA);
			setState(70);
			match(INDENT);
			setState(72); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(71);
				atributo();
				}
				}
				setState(74); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 281474976726016L) != 0) );
			setState(76);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtributoContext extends ParserRuleContext {
		public DefDatoPrimitivoContext defDatoPrimitivo() {
			return getRuleContext(DefDatoPrimitivoContext.class,0);
		}
		public DefArregloContext defArreglo() {
			return getRuleContext(DefArregloContext.class,0);
		}
		public EstructuraAnidadaContext estructuraAnidada() {
			return getRuleContext(EstructuraAnidadaContext.class,0);
		}
		public AtributoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atributo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).enterAtributo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).exitAtributo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YVisitor ) return ((YVisitor<? extends T>)visitor).visitAtributo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtributoContext atributo() throws RecognitionException {
		AtributoContext _localctx = new AtributoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_atributo);
		try {
			setState(81);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				defDatoPrimitivo();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				defArreglo();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(80);
				estructuraAnidada();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoDatoIdContext extends ParserRuleContext {
		public TipoDatoContext tipoDato() {
			return getRuleContext(TipoDatoContext.class,0);
		}
		public TerminalNode ID() { return getToken(YParser.ID, 0); }
		public TipoDatoIdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipoDatoId; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).enterTipoDatoId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).exitTipoDatoId(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YVisitor ) return ((YVisitor<? extends T>)visitor).visitTipoDatoId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoDatoIdContext tipoDatoId() throws RecognitionException {
		TipoDatoIdContext _localctx = new TipoDatoIdContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tipoDatoId);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			tipoDato();
			setState(84);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefDatoPrimitivoContext extends ParserRuleContext {
		public TipoDatoIdContext tipoDatoId() {
			return getRuleContext(TipoDatoIdContext.class,0);
		}
		public TerminalNode SALTO_LINEA() { return getToken(YParser.SALTO_LINEA, 0); }
		public DefDatoPrimitivoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defDatoPrimitivo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).enterDefDatoPrimitivo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).exitDefDatoPrimitivo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YVisitor ) return ((YVisitor<? extends T>)visitor).visitDefDatoPrimitivo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefDatoPrimitivoContext defDatoPrimitivo() throws RecognitionException {
		DefDatoPrimitivoContext _localctx = new DefDatoPrimitivoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_defDatoPrimitivo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			tipoDatoId();
			setState(87);
			match(SALTO_LINEA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefArregloContext extends ParserRuleContext {
		public TipoDatoIdContext tipoDatoId() {
			return getRuleContext(TipoDatoIdContext.class,0);
		}
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode SALTO_LINEA() { return getToken(YParser.SALTO_LINEA, 0); }
		public DefArregloContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defArreglo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).enterDefArreglo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).exitDefArreglo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YVisitor ) return ((YVisitor<? extends T>)visitor).visitDefArreglo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefArregloContext defArreglo() throws RecognitionException {
		DefArregloContext _localctx = new DefArregloContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_defArreglo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			tipoDatoId();
			setState(90);
			match(T__1);
			setState(91);
			expresion();
			setState(92);
			match(T__2);
			setState(93);
			match(SALTO_LINEA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoDatoContext extends ParserRuleContext {
		public TerminalNode ENTERO() { return getToken(YParser.ENTERO, 0); }
		public TerminalNode FLOTANTE() { return getToken(YParser.FLOTANTE, 0); }
		public TerminalNode CADENA() { return getToken(YParser.CADENA, 0); }
		public TerminalNode CARACTER() { return getToken(YParser.CARACTER, 0); }
		public ObjetoContext objeto() {
			return getRuleContext(ObjetoContext.class,0);
		}
		public TipoDatoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipoDato; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).enterTipoDato(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).exitTipoDato(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YVisitor ) return ((YVisitor<? extends T>)visitor).visitTipoDato(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoDatoContext tipoDato() throws RecognitionException {
		TipoDatoContext _localctx = new TipoDatoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_tipoDato);
		try {
			setState(100);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ENTERO:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				match(ENTERO);
				}
				break;
			case FLOTANTE:
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				match(FLOTANTE);
				}
				break;
			case CADENA:
				enterOuterAlt(_localctx, 3);
				{
				setState(97);
				match(CADENA);
				}
				break;
			case CARACTER:
				enterOuterAlt(_localctx, 4);
				{
				setState(98);
				match(CARACTER);
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 5);
				{
				setState(99);
				objeto();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ObjetoContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(YParser.ID, 0); }
		public ObjetoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objeto; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).enterObjeto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).exitObjeto(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YVisitor ) return ((YVisitor<? extends T>)visitor).visitObjeto(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjetoContext objeto() throws RecognitionException {
		ObjetoContext _localctx = new ObjetoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_objeto);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EstructuraAnidadaContext extends ParserRuleContext {
		public TipoDatoIdContext tipoDatoId() {
			return getRuleContext(TipoDatoIdContext.class,0);
		}
		public EstructuraAnidadaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estructuraAnidada; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).enterEstructuraAnidada(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).exitEstructuraAnidada(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YVisitor ) return ((YVisitor<? extends T>)visitor).visitEstructuraAnidada(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EstructuraAnidadaContext estructuraAnidada() throws RecognitionException {
		EstructuraAnidadaContext _localctx = new EstructuraAnidadaContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_estructuraAnidada);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			tipoDatoId();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefFuncionesContext extends ParserRuleContext {
		public TerminalNode PORCENTAJE() { return getToken(YParser.PORCENTAJE, 0); }
		public TerminalNode FUNCIONES_SECCION() { return getToken(YParser.FUNCIONES_SECCION, 0); }
		public TerminalNode SALTO_LINEA() { return getToken(YParser.SALTO_LINEA, 0); }
		public List<TipoFuncionContext> tipoFuncion() {
			return getRuleContexts(TipoFuncionContext.class);
		}
		public TipoFuncionContext tipoFuncion(int i) {
			return getRuleContext(TipoFuncionContext.class,i);
		}
		public DefFuncionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defFunciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).enterDefFunciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).exitDefFunciones(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YVisitor ) return ((YVisitor<? extends T>)visitor).visitDefFunciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefFuncionesContext defFunciones() throws RecognitionException {
		DefFuncionesContext _localctx = new DefFuncionesContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_defFunciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(PORCENTAJE);
			setState(107);
			match(FUNCIONES_SECCION);
			setState(108);
			match(SALTO_LINEA);
			setState(110); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(109);
				tipoFuncion();
				}
				}
				setState(112); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DEFINIR );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoFuncionContext extends ParserRuleContext {
		public FunSinRetornoContext funSinRetorno() {
			return getRuleContext(FunSinRetornoContext.class,0);
		}
		public FunConRetornoContext funConRetorno() {
			return getRuleContext(FunConRetornoContext.class,0);
		}
		public TipoFuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipoFuncion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).enterTipoFuncion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).exitTipoFuncion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YVisitor ) return ((YVisitor<? extends T>)visitor).visitTipoFuncion(this);
			else return visitor.visitChildren(this);
		}
	}
